--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,3 @@
-
 {
   "name": "Hannah English Course",
   "short_name": "HannahCourse",
@@ -8,12 +7,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/imagens/icon-192x192.png",
+      "src": "imagens/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/imagens/icon-512x512.png",
+      "src": "imagens/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
