--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/api/server", "destination": "/api/server.js" }
+    { "source": "/api/chat", "destination": "/api/server.js" }
   ]
 }
