--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hannahenglishcourse",
   "version": "1.0.0",
   "dependencies": {
+    "@google-cloud/text-to-speech": "^5.8.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
