--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,10 @@
 {
   "name": "Hannah English Course",
   "short_name": "HannahCourse",
+  "description": "Learn English through Bible stories while playing engaging games.",
+  "id": "/",
   "start_url": "/index.html",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
@@ -31,6 +34,13 @@
       "type": "image/png",
       "form_factor": "wide"
     }
-  ]
+  ],
+  "related_applications": [
+    {
+      "platform": "webapp",
+      "url": "https://hannahenglishcourse.netlify.app/manifest.json",
+      "id": "hannahenglishcourse"
+    }
+  ],
+  "prefer_related_applications": false
 }
-
