--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
-  "orientation": "portrait",
+  "orientation": "any",
   "icons": [
     {
       "src": "imagens/icon-192x192.png",
