--- a/api_backend/package.json
+++ b/api_backend/package.json
@@ -12,11 +12,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
-    "openai": "^4.28.1",
-    "node-fetch": "^2.6.7"
+    "openai": "^4.28.1"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   },
   "license": "MIT"
 }
