--- a/Level1/Unit1/DataGrammar/aulas/aula5/audio/manifest.json
+++ b/Level1/Unit1/DataGrammar/aulas/aula5/audio/manifest.json
@@ -4,7 +4,7 @@
     "language": null,
     "rate": "1",
     "pitch": "0",
-    "generatedAt": "2025-11-04T16:37:54.001Z"
+    "generatedAt": "2025-11-04T17:05:08.399Z"
   },
   "items": [
     {
@@ -57,6 +57,13 @@
       "file": "pt-br-d37abc06a340484ad49a1398df47c398cdeb8946.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "I am happy.",
+      "file": "en-us-23939b7341e0b2db15f437958c508b0842216b70.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
@@ -78,6 +85,13 @@
       "file": "pt-br-d4174307d9e0b096c85d4096fd68eec51fd84c26.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "He is tall.",
+      "file": "en-us-af163ec42bea51f3309be7bba94b099b8c63c975.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
@@ -85,11 +99,25 @@
       "file": "pt-br-1c27c85f5f4c372ee6ab23bcfa20532332b374e8.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "She is kind.",
+      "file": "en-us-019c1e9cf13b9e9edd13907ed0c10a28ab5691a6.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Ela é gentil.",
       "file": "pt-br-6a727df98525db2edc3ac36dcb20547049c5cc94.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "It is small.",
+      "file": "en-us-8f98a3230c224cbd3f93f0122c851d912157f6ab.mp3"
     },
     {
       "kind": "text",
@@ -113,6 +141,13 @@
       "file": "pt-br-f17a20c53c2b57fc7a475003092ed7fb373bf0bd.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "We are friends.",
+      "file": "en-us-f85a438612ea85b5533543e702c91062a54aebb6.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
@@ -120,11 +155,25 @@
       "file": "pt-br-bc581a00d4584a6dbe0b6aff41754b94b5fc857a.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "You are important.",
+      "file": "en-us-52a2fa8d7ca09e3d5e568b8181df5b0a2619ec73.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Você é importante.",
       "file": "pt-br-b989ad67418b29804ab6629f60cb7d58d9038c8e.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "They are strong.",
+      "file": "en-us-cfdd0e2875449009f23b7ce631553918fc40c121.mp3"
     },
     {
       "kind": "text",
@@ -148,11 +197,25 @@
       "file": "pt-br-63487ac064961a69171359b4883b12da7f1534f1.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "God is good.",
+      "file": "en-us-11ee17c9157ed0472cd61cd5fbf248d89b38edd3.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Deus é bom.",
       "file": "pt-br-bf9fdbeed0af54042a45eab4376425fc49c72301.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "We are in the world.",
+      "file": "en-us-73a7100fade0219249e864ed48cc69aabe4296cc.mp3"
     },
     {
       "kind": "text",
@@ -176,11 +239,25 @@
       "file": "pt-br-5ec620ef5389f96322287b5f5715d780bad6d14b.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "It is not dark.",
+      "file": "en-us-4bf230af42ce5f9aea76d38c684ccd5c930a827c.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Não está escuro.",
       "file": "pt-br-673e92f6e9b60bca8e1fd7650a72d3a89a407820.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "They are not alone.",
+      "file": "en-us-55977a0c313b4bd0abd39c0a0ac6a29317820792.mp3"
     },
     {
       "kind": "text",
@@ -204,11 +281,25 @@
       "file": "pt-br-d832ca9752aa10ec27ac8b080f7ac523e088d81a.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "I am = I'm",
+      "file": "en-us-3551d31347d0ad0dc6f190977bd6ac041e78b193.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Exemplo:",
       "file": "pt-br-1f257340c6973475b77762f1f48d0bab701485d4.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "I'm happy.",
+      "file": "en-us-1f6a5fb43cd019673e73d7131a98641197a01145.mp3"
     },
     {
       "kind": "text",
@@ -218,11 +309,25 @@
       "file": "pt-br-4240ee01934ed8d8f4697259d5f69ec8b887ac59.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "He is = He's",
+      "file": "en-us-b273b8301973f38254d51f1afb6e01a1701abaff.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Exemplo:",
       "file": "pt-br-1f257340c6973475b77762f1f48d0bab701485d4.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "He's strong.",
+      "file": "en-us-7cac01ef3493237e3ffd7fce80c7394626aeeeb9.mp3"
     },
     {
       "kind": "text",
@@ -232,11 +337,25 @@
       "file": "pt-br-1ea8706bd241e03d1c9bc0800fa0e1a2e1d29b43.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "They are = They're",
+      "file": "en-us-8f94e65dda1e009000679f0c8f6a657ebd425219.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Exemplo:",
       "file": "pt-br-1f257340c6973475b77762f1f48d0bab701485d4.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "They're here.",
+      "file": "en-us-312f716fb2ccf7dd87290e79cb359f8381528440.mp3"
     },
     {
       "kind": "text",
@@ -267,11 +386,32 @@
       "file": "pt-br-bdaaca0576a6a6f3313d439755abbd762fb9c9db.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "That’s = That is",
+      "file": "en-us-fb0028a02294b19456c93e21870aec2050934be5.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Essa é a criação de Deus.",
       "file": "pt-br-d72262a322afb7d42353add939881a5f92cddfbe.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "That’s God’s creation!",
+      "file": "en-us-0333666b8a3d6c6e07024abe4354124f8ece8b03.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "There’s = There is",
+      "file": "en-us-67b470f0f332183a55d241edf38fab26cd3bba34.mp3"
     },
     {
       "kind": "text",
@@ -281,11 +421,32 @@
       "file": "pt-br-5abde68ce1b8d46fc1f7603dda78a159c4adaf88.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "There’s light in the world now!",
+      "file": "en-us-38ce9a7e80cac37ef28a68558b7ddc9f314db7b3.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "Here’s = Here is",
+      "file": "en-us-d048fbe169e2253c719c31212931f30f225041dd.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Aqui está o céu que Deus criou.",
       "file": "pt-br-03704575502f7513d0c60dea6237dabb6941ac23.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "Here’s the sky God made!",
+      "file": "en-us-f4c87e39df9ca5070e71fc25094e4a138f71cab1.mp3"
     },
     {
       "kind": "subtitle",
@@ -302,11 +463,25 @@
       "file": "pt-br-9f6d283482d132d437f51e7ba0bdb8f3565d135c.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "I am Hannah. I am happy to tell you this story.",
+      "file": "en-us-9542a0ba207decd1a2c01f1bd49ca878559d61e7.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Eu sou Hannah. Estou feliz em contar esta história para você.",
       "file": "pt-br-331ef4ac06adbbf6fe505c4d252f19b5f9eb7bf5.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "The sky is blue. The stars are bright.",
+      "file": "en-us-5e5dcdee8806b65597d4e3c244790b72a6941a51.mp3"
     },
     {
       "kind": "text",
@@ -316,11 +491,25 @@
       "file": "pt-br-1b4a8dbfa0b2a4c33e78db6a00978e4b7d8c86f5.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "God is the Creator. God is good.",
+      "file": "en-us-9f77eeffc8a0e522ac299b9aa5a749116d8a4770.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Deus é o Criador. Deus é bom.",
       "file": "pt-br-fa3139ec54142f1fc982a7124cc20b8f35e2e2b0.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "That’s how the world began!",
+      "file": "en-us-cdc65930162a591e3e7bf0aad7bc1c6d9c6c1e3b.mp3"
     },
     {
       "kind": "text",
@@ -330,11 +519,25 @@
       "file": "pt-br-fa07d97e88b8741525f40284cc6c077d52d8ebc0.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "There’s a beautiful garden.",
+      "file": "en-us-08dacfa2d037e475090eccc35f86ae8ec5e83471.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Há um belo jardim.",
       "file": "pt-br-8094b6ef5e1ead8971e1974cc78c80f327299250.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "Here’s the sun that shines brightly.",
+      "file": "en-us-5d9143e6fbd7bb5d61cae4c165cf538b567d1408.mp3"
     },
     {
       "kind": "text",
