--- a/Level1/Unit1/DataGrammar/aulas/aula5/audio/manifest.json
+++ b/Level1/Unit1/DataGrammar/aulas/aula5/audio/manifest.json
@@ -4,7 +4,7 @@
     "language": null,
     "rate": "1",
     "pitch": "0",
-    "generatedAt": "2025-11-05T13:49:51.539Z"
+    "generatedAt": "2025-11-05T14:04:04.541Z"
   },
   "items": [
     {
@@ -13,13 +13,6 @@
       "voice": "pt-BR-Standard-C",
       "text": "O verbo “ser/estar” no presente na História da Criação",
       "file": "pt-br-673d00f6298f1e4c2d6f797aac6b24061ed06d04.mp3"
-    },
-    {
-      "kind": "text-bold-large",
-      "lang": "en-US",
-      "voice": "en-US-Standard-I",
-      "text": "am • is • are",
-      "file": "en-us-ebfa777eb57ae5e9445220e892a140fe8aeb3f60.mp3"
     },
     {
       "kind": "subtitle",
@@ -34,6 +27,34 @@
       "voice": "pt-BR-Standard-C",
       "text": "Olá, pessoal! Hoje vamos aprender sobre as três formas do verbo “ser/estar” usadas no inglês no tempo presente. Esse verbo é muito importante para falar sobre identidade, características e estados.",
       "file": "pt-br-52b69a69acd6bc3f0ed53e799202f7d6f105c799.mp3"
+    },
+    {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "text|pt-BR|No inglês, o verbo “ser/estar” no presente possui três formas diferentes. Veja:",
+      "file": "pt-br-8f1c351c3aa03abf7211581cbdd5aabc33181fcb.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "am",
+      "file": "en-us-9e56dbeff632a968c7f64f17c36f33091ce42857.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "is",
+      "file": "en-us-0e9663d7d581d51c921feac4e349804643900d59.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "are",
+      "file": "en-us-f7adbfc3092900b98273949b64a73d0067f5ce1a.mp3"
     },
     {
       "kind": "subtitle",
@@ -326,8 +347,8 @@
       "kind": "text-bold-large",
       "lang": "en-US",
       "voice": "en-US-Standard-I",
-      "text": "I am → I'm",
-      "file": "en-us-06ed94752ebe3c0f1d58c486f0c0a321247a6dc1.mp3"
+      "text": "I am = I'm",
+      "file": "en-us-3551d31347d0ad0dc6f190977bd6ac041e78b193.mp3"
     },
     {
       "kind": "text",
@@ -354,8 +375,8 @@
       "kind": "text-bold-large",
       "lang": "en-US",
       "voice": "en-US-Standard-I",
-      "text": "He is → He's",
-      "file": "en-us-5598bc19b72b2b64c02ecb472cf3f4697738e375.mp3"
+      "text": "He is = He's",
+      "file": "en-us-b273b8301973f38254d51f1afb6e01a1701abaff.mp3"
     },
     {
       "kind": "text",
@@ -382,8 +403,8 @@
       "kind": "text-bold-large",
       "lang": "en-US",
       "voice": "en-US-Standard-I",
-      "text": "They are → They're",
-      "file": "en-us-45212d4ba192b94f8bbb8977b22a63995a4525e3.mp3"
+      "text": "They are = They're",
+      "file": "en-us-8f94e65dda1e009000679f0c8f6a657ebd425219.mp3"
     },
     {
       "kind": "text",
@@ -438,8 +459,8 @@
       "kind": "text-bold-large",
       "lang": "en-US",
       "voice": "en-US-Standard-I",
-      "text": "That’s → That is",
-      "file": "en-us-1df0f05ce37941a4b782764cf6e5d11f3746ebd0.mp3"
+      "text": "That’s = That is",
+      "file": "en-us-fb0028a02294b19456c93e21870aec2050934be5.mp3"
     },
     {
       "kind": "text-bold-large",
@@ -466,8 +487,8 @@
       "kind": "text-bold-large",
       "lang": "en-US",
       "voice": "en-US-Standard-I",
-      "text": "There’s → There is",
-      "file": "en-us-252d60443359a211208d05d515f9f98a2b48dd0b.mp3"
+      "text": "There’s = There is",
+      "file": "en-us-67b470f0f332183a55d241edf38fab26cd3bba34.mp3"
     },
     {
       "kind": "text-bold-large",
@@ -494,8 +515,8 @@
       "kind": "text-bold-large",
       "lang": "en-US",
       "voice": "en-US-Standard-I",
-      "text": "Here’s → Here is",
-      "file": "en-us-0a08e2d2a7d11b4f864528f73d2e430b884a1051.mp3"
+      "text": "Here’s = Here is",
+      "file": "en-us-d048fbe169e2253c719c31212931f30f225041dd.mp3"
     },
     {
       "kind": "text-bold-large",
