--- a/Level1/Unit1/DataGrammar/aulas/aula5/audio/manifest.json
+++ b/Level1/Unit1/DataGrammar/aulas/aula5/audio/manifest.json
@@ -4,7 +4,7 @@
     "language": null,
     "rate": "1",
     "pitch": "0",
-    "generatedAt": "2025-11-05T14:04:04.541Z"
+    "generatedAt": "2025-11-05T14:10:22.246Z"
   },
   "items": [
     {
@@ -32,8 +32,8 @@
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "text|pt-BR|No inglês, o verbo “ser/estar” no presente possui três formas diferentes. Veja:",
-      "file": "pt-br-8f1c351c3aa03abf7211581cbdd5aabc33181fcb.mp3"
+      "text": "No inglês, o verbo “ser/estar” no presente possui três formas diferentes. Veja:",
+      "file": "pt-br-e2e3f839e17292fc2532f4469fa4dd45ae086fec.mp3"
     },
     {
       "kind": "text-bold-large",
