--- a/Level0/Unit1/DataGrammarDialogo/aulas/aula5/audio/manifest.json
+++ b/Level0/Unit1/DataGrammarDialogo/aulas/aula5/audio/manifest.json
@@ -4,7 +4,7 @@
     "language": null,
     "rate": "1",
     "pitch": "0",
-    "generatedAt": "2025-11-14T19:09:12.615Z"
+    "generatedAt": "2025-11-14T19:21:45.111Z"
   },
   "items": [
     {
@@ -78,6 +78,13 @@
       "file": "pt-br-ca3c0648e3a48b46de7744d9d45f946a0c7b30e9.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"Hello! My name is Hannah.\"",
+      "file": "en-us-b1a5a68e927dd2be91cadae216c0a14e2aba9af2.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
@@ -85,11 +92,25 @@
       "file": "pt-br-2e8854226e46001d40908380bf173b2246a9a947.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"Hi! I'm Hannah.\"",
+      "file": "en-us-ccfe4afe9e0b5b0967ebc903060cbf87f72c60f9.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Este é um cumprimento mais casual, geralmente usado com amigos.",
       "file": "pt-br-e315b2b49c5391b5a7923d05785606279e9e289d.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"Good morning! I am happy to meet you.\"",
+      "file": "en-us-32641b5659906fc335e740938ae917205969b6b8.mp3"
     },
     {
       "kind": "text",
@@ -113,11 +134,25 @@
       "file": "pt-br-da770fa228040a2f9cfbfa4dfd87d3bd7d6d6e0d.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"My name is Hannah.\"",
+      "file": "en-us-6d6e6b2ce463f5c8628363a47ae11eeab97f9b5d.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Você pode começar com seu nome para que os outros saibam quem você é.",
       "file": "pt-br-e987317b4db93a4af8174f73e7cda7f97842a542.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"I'm 12 years old.\"",
+      "file": "en-us-c0ba3df495b593ebf85959b4be4383b0f2ede7ca.mp3"
     },
     {
       "kind": "text",
@@ -127,11 +162,25 @@
       "file": "pt-br-79d82f3a863f12f2357d3536b49732261b01e603.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"I am a student.\"",
+      "file": "en-us-5e1a92632aa56d921643c20cccd06f6e829e3743.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Isso diz às pessoas o que você faz.",
       "file": "pt-br-e2de136ea4c88f1a1b09c8132bfe6386b9ec80ec.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"I am telling a story about the beginning of the world.\"",
+      "file": "en-us-d758f6a38f03ee99cbe6a1678273b1b54cecccc8.mp3"
     },
     {
       "kind": "text",
@@ -155,11 +204,25 @@
       "file": "pt-br-e102d4e7238b2bbda84eec5fa3f57b58570273b5.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"My favorite sports are football and volleyball.\"",
+      "file": "en-us-bd4c3bc68a6f5c71c4f2c53a4ae2ba3f5cdd1395.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Compartilhar seus esportes favoritos pode ajudar você a encontrar amigos com interesses semelhantes.",
       "file": "pt-br-dea0f05b4ba3af02314a7d25d0afc7b35c932f70.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"My favorite color is green.\"",
+      "file": "en-us-251515ae259793088f1379d9f526428b4c74e9e2.mp3"
     },
     {
       "kind": "text",
@@ -183,11 +246,25 @@
       "file": "pt-br-743b343c471234f74cf0a9a94ca5a5597cc5e9ba.mp3"
     },
     {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"I'm not American.\"",
+      "file": "en-us-301f92968a71fec2eee1e4b43796421ba2d72b0f.mp3"
+    },
+    {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
       "text": "Isso diz às pessoas sobre sua nacionalidade.",
       "file": "pt-br-35b9a77a2c1ec8ab6797852bd60414b14a5798c0.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"I am not a teacher.\"",
+      "file": "en-us-e24be37037829b8d5b04d05d5f880cdc0b1e2fc5.mp3"
     },
     {
       "kind": "text",
@@ -209,6 +286,27 @@
       "voice": "pt-BR-Standard-C",
       "text": "Pratique cumprimentando um amigo e se apresentando. Use frases como:",
       "file": "pt-br-da51c3adbe69afcdf081781c5722205befe6e67f.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"Hello! My name is...\"",
+      "file": "en-us-422c55ed6debd3f5f8a7902d44ebe9aace35f248.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"I am... years old.\"",
+      "file": "en-us-71e466bb59602e388c07ae10a774f60285acc5c1.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "\"I like...\"",
+      "file": "en-us-406c6b25e0bb6b4292b618bf1b7dbf6da98f8d32.mp3"
     },
     {
       "kind": "text",
