--- a/Level0/Unit1/DataGrammarDialogo/aulas/aula5/audio/manifest.json
+++ b/Level0/Unit1/DataGrammarDialogo/aulas/aula5/audio/manifest.json
@@ -4,7 +4,7 @@
     "language": null,
     "rate": "1",
     "pitch": "0",
-    "generatedAt": "2025-11-14T20:44:35.854Z"
+    "generatedAt": "2025-11-14T20:53:49.285Z"
   },
   "items": [
     {
@@ -298,8 +298,15 @@
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Existe uma palavra que transforma a frase em negativa.",
-      "file": "pt-br-0368efef1352dc8f1d9d27b482f77ee214057f76.mp3"
+      "text": "Existe uma palavra que transforma a frase em negativa:",
+      "file": "pt-br-8b9fcf132983d7803f6d562f0c17876a5596b138.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "NOT",
+      "file": "en-us-9052f4ba600ec3498ea007dcb86d342f05592aa8.mp3"
     },
     {
       "kind": "text",
@@ -324,10 +331,10 @@
     },
     {
       "kind": "table-cell",
-      "lang": "en-US",
-      "voice": "en-US-Standard-I",
-      "text": "Example",
-      "file": "en-us-10903e0ee8883cda7437d183f7dac428c025f71b.mp3"
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Exemplo",
+      "file": "pt-br-4a6d1d10e701ced54e4b757710c214b39c66f4e9.mp3"
     },
     {
       "kind": "table-cell",
