--- a/Level0/Unit1/DataGrammarDialogo/aulas/aula5/audio/manifest.json
+++ b/Level0/Unit1/DataGrammarDialogo/aulas/aula5/audio/manifest.json
@@ -4,15 +4,15 @@
     "language": null,
     "rate": "1",
     "pitch": "0",
-    "generatedAt": "2025-12-08T14:47:38.852Z"
+    "generatedAt": "2025-12-08T14:54:16.702Z"
   },
   "items": [
     {
       "kind": "title",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
       "text": "Mary Visits Elizabeth – My, Your, His, Her",
-      "file": "pt-br-75f63fa80de8c33494b753060173dad0b72a3af7.mp3"
+      "file": "en-us-7d29f34fb3bb63a8f49a3283f5869ad194ca3f15.mp3"
     },
     {
       "kind": "subtitle",
@@ -72,10 +72,10 @@
     },
     {
       "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
       "text": "my",
-      "file": "pt-br-0a2a65e752fce8bc9393b3f0c403b15c1db5b126.mp3"
+      "file": "en-us-b1e14b2fe923f0f253aa14ca1cf2171fcb2047f5.mp3"
     },
     {
       "kind": "table-cell",
@@ -93,10 +93,10 @@
     },
     {
       "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
       "text": "my",
-      "file": "pt-br-0a2a65e752fce8bc9393b3f0c403b15c1db5b126.mp3"
+      "file": "en-us-b1e14b2fe923f0f253aa14ca1cf2171fcb2047f5.mp3"
     },
     {
       "kind": "table-cell",
@@ -156,10 +156,10 @@
     },
     {
       "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
       "text": "your",
-      "file": "pt-br-8b66741a4263748b787b02a557dbf4d8b1d2aa4f.mp3"
+      "file": "en-us-b79217a0477b5558913b4ef75313eef5fc5189af.mp3"
     },
     {
       "kind": "table-cell",
@@ -177,10 +177,10 @@
     },
     {
       "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
       "text": "your",
-      "file": "pt-br-8b66741a4263748b787b02a557dbf4d8b1d2aa4f.mp3"
+      "file": "en-us-b79217a0477b5558913b4ef75313eef5fc5189af.mp3"
     },
     {
       "kind": "table-cell",
@@ -240,10 +240,10 @@
     },
     {
       "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
       "text": "his",
-      "file": "pt-br-361113c5e3613a5bd447679aba997ed774403b40.mp3"
+      "file": "en-us-44a5c3d55ea7c3dd22eef7503f16272576172dda.mp3"
     },
     {
       "kind": "table-cell",
@@ -261,10 +261,10 @@
     },
     {
       "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
       "text": "his",
-      "file": "pt-br-361113c5e3613a5bd447679aba997ed774403b40.mp3"
+      "file": "en-us-44a5c3d55ea7c3dd22eef7503f16272576172dda.mp3"
     },
     {
       "kind": "table-cell",
@@ -324,10 +324,10 @@
     },
     {
       "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
       "text": "her",
-      "file": "pt-br-9e46c506f102ff2912ecdef332a960df92fefdb9.mp3"
+      "file": "en-us-14cc63e47a18a099e322bcec873804cf9c74ce53.mp3"
     },
     {
       "kind": "table-cell",
@@ -345,10 +345,10 @@
     },
     {
       "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
       "text": "her",
-      "file": "pt-br-9e46c506f102ff2912ecdef332a960df92fefdb9.mp3"
+      "file": "en-us-14cc63e47a18a099e322bcec873804cf9c74ce53.mp3"
     },
     {
       "kind": "table-cell",
