--- a/Level0/Unit3/DataDialogo/sounds/dialogo-manifest.json
+++ b/Level0/Unit3/DataDialogo/sounds/dialogo-manifest.json
@@ -10,6 +10,51 @@
       "student": {
         "audio": "b001_student.mp3"
       }
+    },
+    {
+      "index": 2,
+      "robot": {
+        "audio": "b002_robot.mp3"
+      },
+      "student": {
+        "audio": "b002_student.mp3"
+      }
+    },
+    {
+      "index": 3,
+      "robot": {
+        "audio": "b003_robot.mp3"
+      },
+      "student": {
+        "audio": "b003_student.mp3"
+      }
+    },
+    {
+      "index": 4,
+      "robot": {
+        "audio": "b004_robot.mp3"
+      },
+      "student": {
+        "audio": "b004_student.mp3"
+      }
+    },
+    {
+      "index": 5,
+      "robot": {
+        "audio": "b005_robot.mp3"
+      },
+      "student": {
+        "audio": "b005_student.mp3"
+      }
+    },
+    {
+      "index": 6,
+      "robot": {
+        "audio": "b006_robot.mp3"
+      },
+      "student": {
+        "audio": "b006_student.mp3"
+      }
     }
   ]
 }
