--- a/Level0/Unit3/DataDialogo/sounds/dialogo-manifest.json
+++ b/Level0/Unit3/DataDialogo/sounds/dialogo-manifest.json
@@ -55,6 +55,15 @@
       "student": {
         "audio": "b006_student.mp3"
       }
+    },
+    {
+      "index": 7,
+      "robot": {
+        "audio": "b007_robot.mp3"
+      },
+      "student": {
+        "audio": "b007_student.mp3"
+      }
     }
   ]
 }
