--- a/Level0/Unit4/DataStory/sounds/storycards-manifest.json
+++ b/Level0/Unit4/DataStory/sounds/storycards-manifest.json
@@ -1,5 +1,5 @@
 {
-  "title": "The Baby God Promised (Genesis 21)",
+  "title": "God is Good — God is the Creator",
   "basePath": "sounds/",
   "cards": [
     {
@@ -26,6 +26,21 @@
       "id": "imagem5",
       "index": 5,
       "audio": "card5.mp3"
+    },
+    {
+      "id": "imagem6",
+      "index": 6,
+      "audio": "card6.mp3"
+    },
+    {
+      "id": "imagem7",
+      "index": 7,
+      "audio": "card7.mp3"
+    },
+    {
+      "id": "imagem8",
+      "index": 8,
+      "audio": "card8.mp3"
     }
   ]
 }
