--- a/Level0/Unit4/DataGrammar/aulas/aula5/audio/manifest.json
+++ b/Level0/Unit4/DataGrammar/aulas/aula5/audio/manifest.json
@@ -4,7 +4,7 @@
     "language": null,
     "rate": "1",
     "pitch": "0",
-    "generatedAt": "2026-02-27T21:02:18.816Z"
+    "generatedAt": "2026-02-27T21:58:11.072Z"
   },
   "items": [
     {
@@ -25,29 +25,8 @@
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Nesta aula, vamos aprender como falar de uma coisa usando duas palavrinhas muito importantes no inglês.",
-      "file": "pt-br-9ad187e6155cffaf6d84a9c63111469ab38c910f.mp3"
-    },
-    {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
       "text": "Vamos observar o mundo ao nosso redor e lembrar que Deus criou todas as coisas.",
       "file": "pt-br-03f9cf811cebce8853eec575bb4192bab230bd9c.mp3"
-    },
-    {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Também vamos aprender como escolher a palavrinha correta antes de cada palavra.",
-      "file": "pt-br-b1b761fce7e27a0d46ec1d0dc7c3adb2a0bc9e0e.mp3"
-    },
-    {
-      "kind": "subtitle",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Deus criou todas as coisas",
-      "file": "pt-br-16ad2793c0e9c40f4fd0d75832f830d2d7ca7044.mp3"
     },
     {
       "kind": "text",
@@ -74,50 +53,64 @@
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Veja alguns exemplos:",
-      "file": "pt-br-fbb2574ea76166c033d043afd48198dde3718dea.mp3"
+      "text": "Nesta aula, vamos aprender a falar de uma coisa.",
+      "file": "pt-br-655c03c271128739268009683469a694fc5a559b.mp3"
+    },
+    {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Usamos palavrinhas antes das palavras.",
+      "file": "pt-br-e19148da47da4a51f8bf0d7d9cc98a203146468e.mp3"
+    },
+    {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Temos duas formas:",
+      "file": "pt-br-17ddf7144bd7976b37c4e501e6d61e1789e50364.mp3"
     },
     {
       "kind": "text-bold-large",
       "lang": "en-US",
       "voice": "en-US-Standard-I",
-      "text": "God is good.",
-      "file": "en-us-11ee17c9157ed0472cd61cd5fbf248d89b38edd3.mp3"
+      "text": "A",
+      "file": "en-us-71c84e5eb62c0202979a81b978e84a327607210c.mp3"
     },
     {
       "kind": "text-bold-large",
       "lang": "en-US",
       "voice": "en-US-Standard-I",
-      "text": "God is the creator.",
-      "file": "en-us-e8440706ab77a7a42a9139c7845db435e275718d.mp3"
+      "text": "An",
+      "file": "en-us-f13e98ffaa94b58a910686216d32443cf0f11941.mp3"
+    },
+    {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Vamos aprender como usar cada uma.",
+      "file": "pt-br-2c438bc094f276480769cf54bbc51bc9232e2260.mp3"
     },
     {
       "kind": "subtitle",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "1. Uma coisa",
-      "file": "pt-br-f8eefd3f69e13af26d0e909057ada95d1f29f792.mp3"
+      "text": "1. Falande de uma coisa",
+      "file": "pt-br-3dbc4c688211a18770c14e2c142c7d1f78a7f2c8.mp3"
     },
     {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Quando falamos de apenas uma coisa, usamos uma palavrinha antes do nome dessa coisa.",
-      "file": "pt-br-1330ed3a4012ab3a4b90cfdf0a98085c629b28b4.mp3"
+      "text": "Quando falamos de uma coisa, usamos uma palavrinha antes do nome.",
+      "file": "pt-br-9cd4983df8d8792bbb246dc2c04094ede97cfd4c.mp3"
     },
     {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Essa palavrinha ajuda a mostrar que estamos falando de uma única coisa.",
-      "file": "pt-br-dbedf1a92a93bacb339c8aacb50147ba4ef14fb1.mp3"
-    },
-    {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Veja alguns exemplos de uma coisa:",
-      "file": "pt-br-382e629527796c59200b14e8d61879e2a55a6da1.mp3"
+      "text": "Veja:",
+      "file": "pt-br-0635c85e7c6330e37245e69e1d5b26ea1b9a38e2.mp3"
     },
     {
       "kind": "text-bold-large",
@@ -148,102 +141,25 @@
       "file": "en-us-cc1720d173140c19bb25ce3da22c761c67af7d08.mp3"
     },
     {
-      "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Com uma palavrinha",
-      "file": "pt-br-9ad6e9cece9362092627029b0d748531e3c6e167.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Exemplo",
-      "file": "pt-br-4a6d1d10e701ced54e4b757710c214b39c66f4e9.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "en-US",
-      "voice": "en-US-Standard-I",
-      "text": "a",
-      "file": "en-us-ede9e0fb702e33d9f3ae7f5306c7cdcbd09c5051.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "en-US",
-      "voice": "en-US-Standard-I",
-      "text": "a tree",
-      "file": "en-us-09028ffe0416e3d0333f31b7f78f0924576f79a1.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "en-US",
-      "voice": "en-US-Standard-I",
-      "text": "a",
-      "file": "en-us-ede9e0fb702e33d9f3ae7f5306c7cdcbd09c5051.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "en-US",
-      "voice": "en-US-Standard-I",
-      "text": "a rabbit",
-      "file": "en-us-2ee3512c1db28c38fa5f75bf3f0e4067271c56f8.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "en-US",
-      "voice": "en-US-Standard-I",
-      "text": "an",
-      "file": "en-us-4628e06942f4082e819f174aa95a14bdbc480c61.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "en-US",
-      "voice": "en-US-Standard-I",
-      "text": "an apple",
-      "file": "en-us-3e8a61f1883512c82d293beb426b78d58b285780.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "en-US",
-      "voice": "en-US-Standard-I",
-      "text": "an",
-      "file": "en-us-4628e06942f4082e819f174aa95a14bdbc480c61.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "en-US",
-      "voice": "en-US-Standard-I",
-      "text": "an elephant",
-      "file": "en-us-cc1720d173140c19bb25ce3da22c761c67af7d08.mp3"
-    },
-    {
       "kind": "subtitle",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "2. Quando usar a forma com som de consoante",
-      "file": "pt-br-daabe81c0b644a305e7d634d5a0141a9ec44a868.mp3"
+      "text": "2. Usando A",
+      "file": "pt-br-7fc4022955c04d31c3cb13673afecc92216988d1.mp3"
     },
     {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Usamos uma forma antes de palavras que começam com som de consoante.",
-      "file": "pt-br-5e9ddb9cc554c56732960ae384ffdcc15b046bf7.mp3"
+      "text": "Usamos essa forma antes de algumas palavras.",
+      "file": "pt-br-a5bee4e6036a78fe44090dbc8f8027ca383d0c87.mp3"
     },
     {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Esse som é como o começo de palavras como \"b\", \"t\", \"p\" e outras.",
-      "file": "pt-br-0c8c282e4e1d768fd5a3bc01450bfb9bdad6726d.mp3"
-    },
-    {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Veja alguns exemplos:",
-      "file": "pt-br-fbb2574ea76166c033d043afd48198dde3718dea.mp3"
+      "text": "Veja os exemplos:",
+      "file": "pt-br-dba428722255c8b037aa99b31a5b935eaf91f388.mp3"
     },
     {
       "kind": "text-bold-large",
@@ -265,20 +181,6 @@
       "voice": "en-US-Standard-I",
       "text": "a person",
       "file": "en-us-a92a5da0679fdde29ed3a0b8d6044f79cd24398e.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Palavra",
-      "file": "pt-br-eff47a5774cb372d412153f01eb73e2c07a5ec8b.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Frase",
-      "file": "pt-br-7fb8af8fb4885ae1506518139616bafb7817758b.mp3"
     },
     {
       "kind": "table-cell",
@@ -326,29 +228,22 @@
       "kind": "subtitle",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "3. Quando usar a forma com som de vogal",
-      "file": "pt-br-4385386a7bd714f139caf126d06bb6b2c98b1a06.mp3"
+      "text": "3. Usando AN",
+      "file": "pt-br-5ca650c3e18393d80c067fbb132c3e94b5548575.mp3"
     },
     {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Usamos outra forma antes de palavras que começam com som de vogal.",
-      "file": "pt-br-d0c54a21f0a9e1cb81f9b3dbd0d45acc53441994.mp3"
+      "text": "Usamos essa forma com palavras que começam com A, E, I, O, U.",
+      "file": "pt-br-d03d38fa25c21b80d82736440b70a367747c896a.mp3"
     },
     {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Esses sons são como \"a\", \"e\", \"i\", \"o\" e \"u\".",
-      "file": "pt-br-100b1f9013484ae0f590592cb0a5ae631fcc95b5.mp3"
-    },
-    {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Veja alguns exemplos:",
-      "file": "pt-br-fbb2574ea76166c033d043afd48198dde3718dea.mp3"
+      "text": "Veja os exemplos:",
+      "file": "pt-br-dba428722255c8b037aa99b31a5b935eaf91f388.mp3"
     },
     {
       "kind": "text-bold-large",
@@ -370,20 +265,6 @@
       "voice": "en-US-Standard-I",
       "text": "an orange",
       "file": "en-us-89339400a7b8c519ce2ecb7598f658a6b36e29cf.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Palavra",
-      "file": "pt-br-eff47a5774cb372d412153f01eb73e2c07a5ec8b.mp3"
-    },
-    {
-      "kind": "table-cell",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Frase",
-      "file": "pt-br-7fb8af8fb4885ae1506518139616bafb7817758b.mp3"
     },
     {
       "kind": "table-cell",
@@ -428,6 +309,27 @@
       "file": "en-us-76443c82d05075d3104aa04b3b177c8eb49c2782.mp3"
     },
     {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Veja a diferença:",
+      "file": "pt-br-4a193478d9de6810808b1653dc3917f3b172cf43.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "a tree",
+      "file": "en-us-09028ffe0416e3d0333f31b7f78f0924576f79a1.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "an apple",
+      "file": "en-us-3e8a61f1883512c82d293beb426b78d58b285780.mp3"
+    },
+    {
       "kind": "subtitle",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
@@ -445,8 +347,8 @@
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Podemos fazer perguntas simples e responder.",
-      "file": "pt-br-05f0db8055e3b16041d743fa8ecda62c952988e4.mp3"
+      "text": "Deus criou muitas coisas.",
+      "file": "pt-br-a9f00a11f2c18cdfa7a358c14efdebb5003ed0b1.mp3"
     },
     {
       "kind": "table-cell",
@@ -522,22 +424,64 @@
       "kind": "subtitle",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "5. Frases simples",
-      "file": "pt-br-6659a57b4ee27f3552837200c86b5b346adcfe75.mp3"
+      "text": "5. Vamos repetir",
+      "file": "pt-br-3caec55030a96802f48d2fa794a2550b8006311e.mp3"
     },
     {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Agora vamos repetir algumas frases simples.",
-      "file": "pt-br-69daeb17e323f4af5c39332d938c83b959e999e8.mp3"
+      "text": "Repita:",
+      "file": "pt-br-b9ee78c90713a10a80123a1fc7e2cc809fc824ca.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "a tree",
+      "file": "en-us-09028ffe0416e3d0333f31b7f78f0924576f79a1.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "a rabbit",
+      "file": "en-us-2ee3512c1db28c38fa5f75bf3f0e4067271c56f8.mp3"
     },
     {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Essas frases ajudam você a aprender a falar de uma coisa.",
-      "file": "pt-br-4beb1a142918ef0a16e26ab2735d604b6b32cdc3.mp3"
+      "text": "Agora:",
+      "file": "pt-br-5967d7a003dab2fc9842cd0a49aea19e54099430.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "an apple",
+      "file": "en-us-3e8a61f1883512c82d293beb426b78d58b285780.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "an elephant",
+      "file": "en-us-cc1720d173140c19bb25ce3da22c761c67af7d08.mp3"
+    },
+    {
+      "kind": "subtitle",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "6. Frases simples",
+      "file": "pt-br-9ae995bc769d948f28ef9200b6d71d60dafa151d.mp3"
+    },
+    {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Agora vamos falar frases completas.",
+      "file": "pt-br-1b062041b9afeeb21c3a81dc5182061ead286958.mp3"
     },
     {
       "kind": "text-bold-large",
@@ -571,8 +515,8 @@
       "kind": "subtitle",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "6. Deus ama você",
-      "file": "pt-br-02138d3adc171374af67c47bff66d1940f3e6d16.mp3"
+      "text": "7. Deus ama você",
+      "file": "pt-br-78e86d7582e70829571b6c0834a6890a93ab62fe.mp3"
     },
     {
       "kind": "text",
@@ -655,6 +599,41 @@
       "kind": "subtitle",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
+      "text": "Vamos lembrar",
+      "file": "pt-br-8c56cdc1a7ee721df884a412bdbb24241279c29f.mp3"
+    },
+    {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Para falar de uma coisa, usamos uma palavrinha antes do nome.",
+      "file": "pt-br-fa5acc148a06b7927e5067cc0f57963ed708d48d.mp3"
+    },
+    {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Temos duas formas.",
+      "file": "pt-br-4e988550b29ac30aec262d1b9cb414492bbf195c.mp3"
+    },
+    {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Uma forma usamos com muitas palavras.",
+      "file": "pt-br-8c28204032b2418a057c8908d3b4465e8fc8b3d5.mp3"
+    },
+    {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Outra forma usamos com palavras que começam com A, E, I, O, U.",
+      "file": "pt-br-db8be02f9cb11c74d2ddc7ec0eb0f6462d0860f8.mp3"
+    },
+    {
+      "kind": "subtitle",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
       "text": "Conclusão",
       "file": "pt-br-daf7ec7b0e18b12d8314fb1593e1fa8534234b86.mp3"
     },
@@ -662,29 +641,22 @@
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Nesta aula, aprendemos a falar de uma coisa usando duas palavrinhas importantes.",
-      "file": "pt-br-ab357b62c7042c95dbe592110e7df1350911ba1b.mp3"
+      "text": "Agora você pode olhar para o mundo e falar de uma coisa.",
+      "file": "pt-br-35a758fe293db9a1cde491319fe261b259523805.mp3"
     },
     {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Aprendemos quando usar cada uma delas.",
-      "file": "pt-br-3f9290b20d115544de386abdb67eef3473af4af1.mp3"
+      "text": "Deus criou todas as coisas.",
+      "file": "pt-br-de63a6469de253da9688065b806a83c224ba16d7.mp3"
     },
     {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Também vimos exemplos com coisas que Deus criou.",
-      "file": "pt-br-cc09d09c18a06d680821f55dc48ae6d7b9143b10.mp3"
-    },
-    {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Agora você pode olhar ao seu redor e falar sobre o mundo usando frases simples em inglês.",
-      "file": "pt-br-fea26da24e4bee1af02dcdde6f13334432c66998.mp3"
+      "text": "Deus é bom.",
+      "file": "pt-br-bf9fdbeed0af54042a45eab4376425fc49c72301.mp3"
     }
   ]
 }
