--- a/Level0/Unit4/DataGrammar/aulas/aula5/audio/manifest.json
+++ b/Level0/Unit4/DataGrammar/aulas/aula5/audio/manifest.json
@@ -4,7 +4,7 @@
     "language": null,
     "rate": "1",
     "pitch": "0",
-    "generatedAt": "2026-02-27T21:58:11.072Z"
+    "generatedAt": "2026-02-27T22:06:43.141Z"
   },
   "items": [
     {
@@ -95,8 +95,8 @@
       "kind": "subtitle",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "1. Falande de uma coisa",
-      "file": "pt-br-3dbc4c688211a18770c14e2c142c7d1f78a7f2c8.mp3"
+      "text": "1. Falando de uma coisa",
+      "file": "pt-br-de82143418f4045d0d51c0f3d7a4666d714390ca.mp3"
     },
     {
       "kind": "text",
@@ -155,13 +155,6 @@
       "file": "pt-br-a5bee4e6036a78fe44090dbc8f8027ca383d0c87.mp3"
     },
     {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Veja os exemplos:",
-      "file": "pt-br-dba428722255c8b037aa99b31a5b935eaf91f388.mp3"
-    },
-    {
       "kind": "text-bold-large",
       "lang": "en-US",
       "voice": "en-US-Standard-I",
@@ -181,6 +174,13 @@
       "voice": "en-US-Standard-I",
       "text": "a person",
       "file": "en-us-a92a5da0679fdde29ed3a0b8d6044f79cd24398e.mp3"
+    },
+    {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Veja o uso dessas palavras em frases:",
+      "file": "pt-br-027dc5b115a6e7e8b9c454931b73e350a862d09d.mp3"
     },
     {
       "kind": "table-cell",
@@ -235,8 +235,15 @@
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Usamos essa forma com palavras que começam com A, E, I, O, U.",
-      "file": "pt-br-d03d38fa25c21b80d82736440b70a367747c896a.mp3"
+      "text": "Usamos essa forma com palavras que começam com as seguintes letras em Inglês:",
+      "file": "pt-br-c83b06a7d7ba1990e0ab99634d25a6160858914e.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "A, E, I, O, U.",
+      "file": "en-us-17fd0703ea38b6572dff437c5fc38e4bb6f6b419.mp3"
     },
     {
       "kind": "text",
@@ -265,6 +272,13 @@
       "voice": "en-US-Standard-I",
       "text": "an orange",
       "file": "en-us-89339400a7b8c519ce2ecb7598f658a6b36e29cf.mp3"
+    },
+    {
+      "kind": "text",
+      "lang": "pt-BR",
+      "voice": "pt-BR-Standard-C",
+      "text": "Veja o uso dessas palavras em frases:",
+      "file": "pt-br-027dc5b115a6e7e8b9c454931b73e350a862d09d.mp3"
     },
     {
       "kind": "table-cell",
